[java-was] step5-7 구현 (#399)
* HttpCookie 클래스 추가, cookie값에 따라 redirect 구현

* fix typo

* 간단한 template engine 기능 구현

* Delete test method

* HttpHeader 생성부 변경

- model을 html에 적용하는 부분 메소드 분리
- static resource 반환시 지정된 타입이 아닐경우 accept 헤더값을 리턴하도록 변경

* Add iteration in custom template engine

* Add mongodb

* Add UserRepository

* 회원가입, 유저목록 UserRepository 사용하도록 변경

* Modify index.html

* 한줄 메모장 구현

* http request 한글 깨짐 문제 해결

Co-authored-by: carrot.ez <kakaocommerce@kakaocommerceui-MacBookPro.local>